changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add another flag to add_player() to have it supress harmless, but perhaps
confusing message, about swapping stats - on new clients, all stats are
set up in the client - message will still be printed for older clients.
MSW 2011-01-22

Remove metaserver1 support from server.
lib/settings: Remove settings for metaserver1, add not to update metaserver2
server/init.c, socket/metaserver.c: Remove code
MSW 2011-01-22

Don't put artifacts on active list. This fixes boots of mobility and also avoids
an [Error] in the log.
Nicolas Weeger 2011-01-08

Fix memory leak in formula code.
Nicolas Weeger 2011-01-08

Don't make 2 fountains in random maps, one is enough.
Nicolas Weeger 2011-01-08

Fix broken fountains in random maps.
Nicolas Weeger 2011-01-08

test/unit/common/check_living.c: Modify some hard coded array sizes to use
    the defined values.  Remove randomly generated input values and put those
    into arrays - the test only works with specific input values, and randomly
    generating them only works if one is using the same random number generator.
test/unit/common/check_item.c: Disable this test if not using glibc - its
    checking requires specific random number sequence - however, since many
    of the RANDOM() calls are from within libcommon, not easy to hard code
    the values.
INSTALL: Update notes on make check - only works with default values.
MSW 2010-12-26

Change the Animations structure to use New_Face* instead of indexes.
Nicolas Weeger 2010-12-05

Accept skill names with spaces (sense curse/sense magic) in addexp
command.
Andreas Kirschbaum 2010-12-04
